--- a/libs/ui-components/src/main/res/values/colors.xml
+++ b/libs/ui-components/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="base_background_color">#F5F5F5</color>
+    <color name="base_primary_color">#9C27B0</color>
 </resources>
