--- a/features/home/home-impl/src/main/res/layout/home_recipe_item_layout.xml
+++ b/features/home/home-impl/src/main/res/layout/home_recipe_item_layout.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/default_image_height">
+        android:layout_height="@dimen/default_image_height"
+        android:background="@android:color/white">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_view"
